# SKMarket

./: docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
core/: admin.py  filter.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
fixtures/: ad.json  comments.json
frontend_react/src/components/addCard/: AddCard.js
frontend_react/src/components/app/: App.scss
frontend_react/src/components/cards/: Cards.js
frontend_react/src/components/changePassword/: ChangePassword.js
frontend_react/src/components/commentList/: CommentList.js
frontend_react/src/components/footer/: Footer.js
frontend_react/src/components/main/: Main.js
frontend_react/src/components/registration/: Registration.js
market_postgres/: docker-compose.yaml
tests/: conftest.py  factories.py
tests/ads/: test_ad_create_view.py  test_ad_destroy_view.py  test_ad_partial_update_view.py  test_ad_update_view.py  test_ads_list_view.py  test_ads_me_list_view.py  test_ads_retrieve_view.py
tests/comments/: test_comments_create_view.py  test_comments_destroy_view.py  test_comments_list_view.py  test_comments_retrieve_view.py  test_comments_update_view.py
tests/tokens/: test_get_access_token.py  test_get_access_token_by_refresh.py
tests/users/: test_users_list_view.py  test_users_profile_id_view.py
todolist/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py
users/migrations/: 0001_initial.py
